[gd_scene load_steps=12 format=3 uid="uid://cihac584x212b"]

[ext_resource type="Script" uid="uid://c5dwnr38kwynh" path="res://level_3_scene.gd" id="1_a3ucm"]
[ext_resource type="Texture2D" uid="uid://dikq5ihbvjpky" path="res://sprites socorristas/braço queimadura.png" id="2_4rhww"]
[ext_resource type="Texture2D" uid="uid://b1g0fp7016134" path="res://sprites socorristas/cena.png" id="2_wqtqu"]
[ext_resource type="Texture2D" uid="uid://dhk14lhxm1h7k" path="res://sprites socorristas/agua.png" id="4_xnpy4"]
[ext_resource type="Texture2D" uid="uid://dk3hhu0jlxh8j" path="res://sprites socorristas/alcool.png" id="5_12l7c"]
[ext_resource type="Texture2D" uid="uid://0j3wptyx7erg" path="res://sprites socorristas/atadura.png" id="5_sntu7"]
[ext_resource type="Texture2D" uid="uid://ciniweiwxla3d" path="res://sprites socorristas/pomada.png" id="7_8diw4"]
[ext_resource type="Texture2D" uid="uid://bu1hilfytchdi" path="res://sprites socorristas/braço estendido.png" id="8_8diw4"]
[ext_resource type="Texture2D" uid="uid://cdd2h4yr4w8qv" path="res://sprites socorristas/braço estendido bandagens.png" id="9_qa20f"]
[ext_resource type="AudioStream" uid="uid://b50e6cjpls5qx" path="res://sprites socorristas/sound/errado.mp3" id="10_b1iar"]
[ext_resource type="AudioStream" uid="uid://cri1btj13ung1" path="res://sprites socorristas/sound/sucesso.mp3" id="11_mble2"]

[node name="Node2D" type="Node2D"]
position = Vector2(580, 280)
script = ExtResource("1_a3ucm")

[node name="Cena" type="Sprite2D" parent="."]
position = Vector2(-4.499979, 42.49997)
scale = Vector2(4.17091, 3.52459)
texture = ExtResource("2_wqtqu")

[node name="BracoQueimadura" type="Sprite2D" parent="."]
position = Vector2(-18, 12)
texture = ExtResource("2_4rhww")

[node name="Itens_Conteiner" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -463.0
offset_top = 188.0
offset_right = 416.0
offset_bottom = 340.0

[node name="Button_Agua" type="Button" parent="Itens_Conteiner"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -1.95
anchor_right = 1.0
anchor_bottom = -1.95
offset_left = -879.0
offset_top = 298.4
offset_right = -727.0
offset_bottom = 448.4

[node name="Agua" type="Sprite2D" parent="Itens_Conteiner/Button_Agua"]
position = Vector2(76.00003, 75)
scale = Vector2(0.15, 0.146)
texture = ExtResource("4_xnpy4")

[node name="Button_Alcool" type="Button" parent="Itens_Conteiner"]
layout_mode = 0
offset_left = 235.0
offset_top = 3.0
offset_right = 390.0
offset_bottom = 150.0

[node name="Alcool" type="Sprite2D" parent="Itens_Conteiner/Button_Alcool"]
position = Vector2(77, 73)
scale = Vector2(0.6888889, 0.6622222)
texture = ExtResource("5_12l7c")

[node name="Button_Atadura" type="Button" parent="Itens_Conteiner"]
layout_mode = 0
offset_left = 463.0
offset_top = -2.0
offset_right = 622.0
offset_bottom = 148.0

[node name="Atadura" type="Sprite2D" parent="Itens_Conteiner/Button_Atadura"]
position = Vector2(80, 75)
scale = Vector2(0.7066667, 0.6666668)
texture = ExtResource("5_sntu7")

[node name="Button_Pomada" type="Button" parent="Itens_Conteiner"]
layout_mode = 0
offset_left = 719.0
offset_top = 2.0
offset_right = 877.0
offset_bottom = 149.0

[node name="Pomada" type="Sprite2D" parent="Itens_Conteiner/Button_Pomada"]
position = Vector2(78, 73)
scale = Vector2(0.7066667, 0.6622223)
texture = ExtResource("7_8diw4")

[node name="MensagemLabel" type="Label" parent="."]
offset_left = -144.0
offset_top = -203.0
offset_right = 141.0
offset_bottom = -150.0

[node name="BracoEstendido" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("8_8diw4")

[node name="BracoAtadura" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_qa20f")

[node name="Errado" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_b1iar")

[node name="Sucesso" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_mble2")

[connection signal="pressed" from="Itens_Conteiner/Button_Agua" to="." method="_on_button_agua_pressed"]
[connection signal="pressed" from="Itens_Conteiner/Button_Alcool" to="." method="_on_button_alcool_pressed"]
[connection signal="pressed" from="Itens_Conteiner/Button_Atadura" to="." method="_on_button_atadura_pressed"]
[connection signal="pressed" from="Itens_Conteiner/Button_Pomada" to="." method="_on_button_pomada_pressed"]
